[package]
name = "bevy_rcon"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_webserver = "0.1.1"
bevy_easy_database = "0.1.1"
bevy_defer = "0.13.3"
bevy = "0.15.2"
axum = "0.8.1"
maud = "0.27.0"
serde_json = "1.0.139"
serde = { version = "1.0.218", features = ["derive"] }

[dev-dependencies]
bevy-inspector-egui = "0.29.1"
